--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
 .row-header{
     margin:0px auto;
     padding:0px auto;
@@ -48,7 +19,7 @@
     padding:70px 30px 70px 30px;
     margin:0px auto;
     background: #9575CD ;
-    color:black;
+    color:floralwhite;
 }
 
 address{
